# rust-exp

./: .gitignore  App.hs  Cargo.toml  Experiment.hs  Font.hs  FrameBuffer.hs  GLFWHelpers.hs  GLSLHelpers.hs  LICENSE  Main.hs  Makefile  QQPlainText.hs  QuadShaderSource.hs  README.md  RustExperiments.hs  rust-exp.cabal  stack.yaml
envmaps/: envmap_copyright.txt
envmaps/coltest/: env_cos_512_x+.hdr  env_cos_512_z-.hdr  env_cos_64_x-.hdr  env_cos_64_y-.hdr  env_cos_8_y+.hdr  env_cos_8_z+.hdr
envmaps/doge/: env_cos_0_x+.hdr  env_cos_0_x-.hdr  env_cos_0_y+.hdr  env_cos_0_y-.hdr  env_cos_0_z+.hdr  env_cos_0_z-.hdr  env_cos_1_x+.hdr  env_cos_1_x-.hdr  env_cos_1_y+.hdr  env_cos_1_y-.hdr  env_cos_1_z+.hdr  env_cos_1_z-.hdr  env_cos_512_x+.hdr  env_cos_512_x-.hdr  env_cos_512_y+.hdr  env_cos_512_y-.hdr  env_cos_512_z+.hdr  env_cos_512_z-.hdr  env_cos_64_x+.hdr  env_cos_64_x-.hdr  env_cos_64_y+.hdr  env_cos_64_y-.hdr  env_cos_64_z+.hdr  env_cos_64_z-.hdr  env_cos_8_x+.hdr  env_cos_8_x-.hdr  env_cos_8_y+.hdr  env_cos_8_y-.hdr  env_cos_8_z+.hdr  env_cos_8_z-.hdr
envmaps/enis/: env_cos_0_x+.hdr  env_cos_0_x-.hdr  env_cos_0_y+.hdr  env_cos_0_y-.hdr  env_cos_0_z+.hdr  env_cos_0_z-.hdr  env_cos_1_x+.hdr  env_cos_1_x-.hdr  env_cos_1_y+.hdr  env_cos_1_y-.hdr  env_cos_1_z+.hdr  env_cos_1_z-.hdr  env_cos_512_x+.hdr  env_cos_512_x-.hdr  env_cos_512_y+.hdr  env_cos_512_y-.hdr  env_cos_512_z+.hdr  env_cos_512_z-.hdr  env_cos_64_x+.hdr  env_cos_64_x-.hdr  env_cos_64_y+.hdr  env_cos_64_y-.hdr  env_cos_64_z+.hdr  env_cos_64_z-.hdr  env_cos_8_x+.hdr  env_cos_8_x-.hdr  env_cos_8_y+.hdr  env_cos_8_y-.hdr  env_cos_8_z+.hdr  env_cos_8_z-.hdr
envmaps/glacier/: env_cos_0_x+.hdr  env_cos_0_x-.hdr  env_cos_0_y+.hdr  env_cos_0_y-.hdr  env_cos_0_z+.hdr  env_cos_0_z-.hdr  env_cos_1_x+.hdr  env_cos_1_x-.hdr  env_cos_1_y+.hdr  env_cos_1_y-.hdr  env_cos_1_z+.hdr  env_cos_1_z-.hdr  env_cos_512_x+.hdr  env_cos_512_x-.hdr  env_cos_512_y+.hdr  env_cos_512_y-.hdr  env_cos_512_z+.hdr  env_cos_512_z-.hdr  env_cos_64_x+.hdr  env_cos_64_x-.hdr  env_cos_64_y+.hdr  env_cos_64_y-.hdr  env_cos_64_z+.hdr  env_cos_64_z-.hdr  env_cos_8_x+.hdr  env_cos_8_x-.hdr  env_cos_8_y+.hdr  env_cos_8_y-.hdr  env_cos_8_z+.hdr  env_cos_8_z-.hdr
envmaps/grace/: env_cos_0_x+.hdr  env_cos_0_x-.hdr  env_cos_0_y+.hdr  env_cos_0_y-.hdr  env_cos_0_z+.hdr  env_cos_0_z-.hdr  env_cos_1_x+.hdr  env_cos_1_x-.hdr  env_cos_1_y+.hdr  env_cos_1_y-.hdr  env_cos_1_z+.hdr  env_cos_1_z-.hdr  env_cos_512_x+.hdr  env_cos_512_x-.hdr  env_cos_512_y+.hdr  env_cos_512_y-.hdr  env_cos_512_z+.hdr  env_cos_512_z-.hdr  env_cos_64_x+.hdr  env_cos_64_x-.hdr  env_cos_64_y+.hdr  env_cos_64_y-.hdr  env_cos_64_z+.hdr  env_cos_64_z-.hdr  env_cos_8_x+.hdr  env_cos_8_x-.hdr  env_cos_8_y+.hdr  env_cos_8_y-.hdr  env_cos_8_z+.hdr  (+1 more)
hs-src/: App.hs  AppDefs.hs  BoundedSequence.hs  Experiment.hs  Font.hs  FrameBuffer.hs  GLFWHelpers.hs  GLHelpers.hs  GoLPatterns.hs  Main.hs  Median.hs  QuadRendering.hs  QuadTypes.hs  RustExperiments.hs  RustGoLExperiment.hs  RustNBodyExperiment.hs  RustRasterizerExperiment.hs  RustSineExperiment.hs  Timing.hs  WrapEnum.hs
rs-src/: gol.rs  lib.rs  nbody.rs  rasterizer.rs  sine_scroller.rs
(+120 files in other folders)
